update fix